fix- image layout shift

--- a/app/[locale]/page.module.css
+++ b/app/[locale]/page.module.css
@@ -91,6 +91,14 @@
   border-radius: 10px;
 }
 
+@media screen and (min-width: 1152px) {
+  .projectImage {
+    width: 950px;
+    height: 534.87px;
+    border-radius: 10px;
+  }
+}
+
 @media screen and (min-width: 880px) {
   .heroParagraph {
     margin-left: 115px;
